--- a/styles.css
+++ b/styles.css
@@ -316,6 +316,30 @@ nav i:hover {
     justify-content: space-around;
     gap: 3rem; 
 }
+
+                /* CONTACT PAGE */
+.contact-page {
+    width: 100%;
+    height: 680px;
+    padding-top: 5rem;
+}
+.contact-container {
+    width: 95%;
+    height: 590px;
+    margin-left: 35px;
+    border-radius: .8rem;
+    background-color: whitesmoke;
+}
+.contact-container img {
+    width: 50%;
+    height: 590px;
+    border-radius: .8rem;
+}
+
+
+
+
+
               /* Small devices (phones) */
 @media (max-width: 600px) {
     nav .fa-bars {
