--- a/styles.css
+++ b/styles.css
@@ -329,6 +329,8 @@ nav i:hover {
     margin-left: 35px;
     border-radius: .8rem;
     background-color: whitesmoke;
+    display: flex;
+    justify-content: space-between;
 }
 .contact-container img {
     width: 50%;
@@ -337,6 +339,46 @@ nav i:hover {
     border-bottom-left-radius: .8rem;
     box-shadow: inset  10000px  0 0  rgba(0, 0, 0, 0.884);
 }
+.main-contact {
+    margin-right: 15rem;
+}
+.main-contact h2 {
+    margin-top: 3rem;
+    font-size: 1.5rem;
+    margin-left: 20rem;
+}
+.form {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    margin-top: 3rem;
+    margin-left: 15rem;
+}
+.form input {
+    border: none;
+    width: 300px;
+    background-color: whitesmoke;
+    outline: none;
+    padding: .8rem;
+    margin-top: 2rem;
+    border-bottom: 1.5px solid #34C759;
+}
+.form button {
+    margin-top: 2rem;
+    padding: .8rem 2rem;
+    border: none;
+    border-radius: .8rem;
+    font-size: 1rem;
+    background-color: rgb(10, 10, 10);
+    color: white;
+    font-weight: bold;
+    transition: .5s;
+}
+.form button:hover {
+    background-color: #28e26d;
+}
+
 
 
 
