--- a/styles.css
+++ b/styles.css
@@ -352,7 +352,7 @@ nav i:hover {
     justify-content: center;
     align-items: center;
     flex-direction: column;
-    margin-top: 3rem;
+    margin-top: 2rem;
     margin-left: 15rem;
 }
 .form input {
@@ -362,10 +362,14 @@ nav i:hover {
     outline: none;
     padding: .8rem;
     margin-top: 2rem;
-    border-bottom: 1.5px solid #34C759;
+    border-bottom: 2px solid black;
+}
+.form input:hover {
+    border-bottom: 2px solid #28e26d;
 }
 .form button {
     margin-top: 2rem;
+    margin-left: 6rem;
     padding: .8rem 2rem;
     border: none;
     border-radius: .8rem;
