--- a/styles.css
+++ b/styles.css
@@ -249,7 +249,8 @@ nav i:hover {
 }
 .menu-container h4 {
     text-align: center;
-    font-size: 3rem;
+    font-size: 1.5rem;
+    font-family: cursive;
     color: #233f02;
     font-weight: bold;
     margin-top: 2rem;
@@ -316,16 +317,21 @@ nav i:hover {
     justify-content: space-around;
     gap: 3rem; 
 }
-
                 /* CONTACT PAGE */
 .contact-page {
     width: 100%;
-    height: 680px;
+    height: 650px;
     padding-top: 5rem;
+}
+.contact-page h2 {
+    text-align: center;
+    margin-bottom: 2rem;
+    font-size: 2rem;
+    font-family: monospace;
 }
 .contact-container {
     width: 95%;
-    height: 590px;
+    height: 480px;
     margin-left: 35px;
     border-radius: .8rem;
     background-color: whitesmoke;
@@ -333,44 +339,53 @@ nav i:hover {
     justify-content: space-between;
 }
 .contact-container img {
-    width: 50%;
-    height: 590px;
+    width: 30%;
+    height: 480px;
+    margin-right: 2rem;
     border-top-left-radius: .8rem;
     border-bottom-left-radius: .8rem;
     box-shadow: inset  10000px  0 0  rgba(0, 0, 0, 0.884);
 }
-.main-contact {
-    margin-right: 15rem;
+.contact-writeUp {
+    margin-top: 5rem;
+    margin-right: 5rem;
 }
-.main-contact h2 {
-    margin-top: 3rem;
+.contact-writeUp h4 {
+    margin-top: 2rem;
+}
+.contact-writeUp p {
+    margin-top: .5rem;
+    margin-left: 2.3rem;
+}
+.contact-writeUp i {
+    color: #28e26d;
+    margin-right: 1rem;
     font-size: 1.5rem;
-    margin-left: 20rem;
+}
+.main-contact {
+    margin-top: 5rem;
+    margin-right: 7rem;
 }
 .form {
     display: flex;
     justify-content: center;
     align-items: center;
-    flex-direction: column;
-    margin-top: 2rem;
-    margin-left: 15rem;
+    flex-direction: row;
 }
 .form input {
+    display: block;
+    width: 200px;
     border: none;
-    width: 300px;
     background-color: whitesmoke;
     outline: none;
     padding: .8rem;
     margin-top: 2rem;
-    border-bottom: 2px solid black;
-}
-.form input:hover {
-    border-bottom: 2px solid #28e26d;
+    border-bottom: 1.5px solid black;
 }
 .form button {
     margin-top: 2rem;
-    margin-left: 6rem;
-    padding: .8rem 2rem;
+    margin-left: 2rem;
+    padding: .6rem 1.5rem;
     border: none;
     border-radius: .8rem;
     font-size: 1rem;
@@ -383,47 +398,4 @@ nav i:hover {
     background-color: #28e26d;
 }
 
-
-
-
-
-
-              /* Small devices (phones) */
-@media (max-width: 600px) {
-    nav .fa-bars {
-        display: flex;
-        align-items: center;
-        justify-content: space-between;
-    }
-    nav label {
-        font-size: 1.2rem;
-        margin-right: 3rem;
-    }
-    nav ul li, nav .fas {
-        display: none;
-    }
-    nav .fa-bars {
-        background-color: whitesmoke;
-        color: rgb(10, 10, 10);
-        font-size: 1.5rem;
-        margin-left: 5rem;
-        margin-bottom: 3rem;
-    }
-                  /* HOMEPAGE */
-    .background-image h2 {
-        font-size: 2rem;
-    }
-    .background-image p {
-        font-size: 1rem;
-        padding: 0 1rem;
-        margin-bottom: 7rem;
-    }
-    .background-image button {
-        margin-left: 6rem;
-        position: relative;
-        bottom: 6rem;
-    }
-
-
-  }
   
