--- a/styles.css
+++ b/styles.css
@@ -14,6 +14,8 @@ html {
     scroll-behavior: smooth;
 }
 header {
+    display: flex;
+    justify-content: center;
     height: 4.5rem;
     width: 100%;
     background-color: whitesmoke;
@@ -24,12 +26,13 @@ header {
     box-shadow: 10000px  0 0 0 rgba(0, 0, 0, 0.801);
 }
 nav {
+    width: 90%;
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding: .6rem 8rem;
+    margin: .6rem auto;
 }
-nav label {
+nav > h2 {
     font-size: 2rem;
     line-height: 3rem;
 }
@@ -76,14 +79,20 @@ nav i:hover {
 }
 
               /* HOMEPAGE */
-.background-image {
+#home {
     background-image: url(Images/Background-image.jpg);
-    height: 100vh;
     width: 100%;
+    padding-bottom: 5rem;
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
     box-shadow: inset  10000px  0 0 0 rgba(0, 0, 0, 0.801);
+}
+.background-image {
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    gap: 2rem;
 }
 .background-image h2 {
     padding-top: 13rem;
@@ -93,14 +102,11 @@ nav i:hover {
 }
 .background-image p {
     color: white;
-    margin-top: 1.5rem;
     text-align: center;
     font-size: 1.5rem;
     padding: 0 3rem;
 }
 .background-image button {
-    margin-left: 37rem;
-    margin-top: 2.5rem;
     font-size: 1.5rem;
     padding: .8rem;
     color: white;
@@ -119,59 +125,70 @@ nav i:hover {
     transform: translateY(1.5rem);
 }
                     /* ABOUT US */
-.about-container {
-    height: 730px;
+#about {
     width: 100%;
-    padding-top: 5rem;
-    font-family: Poppins-light;
-}
-.about-title {
-    text-align: center;
-    font-size: 2rem;
-    margin-bottom: 2rem;
-}
-.about-title span {
-    color: #28e26d;
-}
-.about-content {
     display: flex;
-    align-items: center;
+    justify-content: center;
+    padding-top: 6rem;
+}
+.about-container {
+    display: flex;
+    flex-direction: column;
+    gap: 4rem;
+    width: 80%;
+    margin: 0 auto;
+}
+.about-container > h2 {
+    align-self: center;
+    font-size: 2rem;
+    font-family: cursive;
+}
+.about-content-wrapper {
+    display: flex;
     justify-content: space-between;
-    gap: 3rem;
-    margin-top: 1rem;
+    flex-wrap: wrap;
+    width: 100%;
+    align-items: center;
 }
-.about-img img {
+.about-img-wrapper {
     width: 450px;
-    height: 500px;
-    border-radius: 2rem;
-    margin-left: 8rem;
-    margin-bottom: 6rem;
+    height: 450px;
 }
-.about-content .about-text {
-    padding: 4rem;
+.about-img-wrapper > img {
+    width: 100%;
+    height: 100%;
+    border-radius: .8rem;
+}
+.about-text-wrapper {
+    display: flex;
+    flex-direction: column;
+    align-items: start;
+    gap: 2rem;
+    width: 500px;
+    font-size: 1,5rem;
+}
+.about-text-wrapper > p {
     font-size: 1.2rem;
-    word-spacing: .6rem;
-    margin-bottom: 3rem;
+    word-spacing: .4rem;
 }
-.about-content button {
+.about-text-wrapper > button {
     padding: .8rem;
     font-size: 1rem;
     border: none;
     border-radius: .4rem;
     background-color: rgb(10, 10, 10);
     color: white;
-    margin-left: 12rem;
-    margin-top: 2rem;
+    cursor: pointer;
     transition: .5s;
+    align-self: center;
 }
-.about-content button:hover {
+.about-text-wrapper > button:hover {
     background-color: #34C759;
     color: white;
     transform: translateY(-10px);
 }
                     /* OUR SERVICES */
 .service-container {
-    height: 600px;
     width: 100%;
     padding-top: 5rem;
 }
@@ -187,13 +204,15 @@ nav i:hover {
     display: flex;
     align-items: center;
     justify-content: space-around;
-    gap: 2rem;
+    flex-wrap: wrap;
     margin: 2rem;
 }
 .service-content1 .box {
     border: 1px solid #2E865F;
     background-color: #2E865F;
-    height: 14rem;
+    padding-bottom: 1rem;
+    width: 400px;
+    margin-top: 1rem;
     color: white;
     border-radius: 1rem;
     transition: .5s;
@@ -202,7 +221,7 @@ nav i:hover {
     background-color: #34C759;
     color: white;
     border: 1px solid #34C759;
-    transform: translateY(1.1rem);
+    transform: scale(0.92);
 }
 .box .box-title {
     text-align: center;
@@ -219,15 +238,18 @@ nav i:hover {
 .service-content2 {
     display: flex;
     align-items: center;
+    flex-wrap: wrap;
     justify-content: space-around;
-    gap: 2rem;
+    flex-wrap: wrap;
     margin: 2rem;
 }
 .service-content2 .box {
     border: 1px solid #2E865F;
     color: white;
+    width: 400px;
+    margin-top: 1rem;
     background-color: #2E865F;
-    height: 14rem;
+    padding-bottom: 1rem;
     border-radius: 1rem;
     transition: .5s;
 }
@@ -235,7 +257,7 @@ nav i:hover {
     background-color: #34C759;
     color: white;
     border: 1px solid #34C759;
-    transform: translateY(1.2rem);
+    transform: scale(0.92);
 }
                 /* OUR MENU */
 .menu-container {
@@ -260,17 +282,18 @@ nav i:hover {
     display: flex;
     align-items: center;
     justify-content: space-around;
-    gap: 3rem;
+    flex-wrap: wrap;
 }
 .menu-box img {
     width: 70%;
     height: 50%;
+    object-fit: cover;
     border-radius: 1rem;
     margin-left: 3rem;
     margin-top: 1rem;
 }
 .menu-box {
-    width: 25rem;
+    width: 350px;
     height: 20rem;
     margin: 2rem;
     border: none;
@@ -315,13 +338,15 @@ nav i:hover {
     display: flex;
     align-items: center;
     justify-content: space-around;
-    gap: 3rem; 
+    flex-wrap: wrap;
 }
                 /* CONTACT PAGE */
 .contact-page {
     width: 100%;
-    height: 650px;
     padding-top: 5rem;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 .contact-page h2 {
     text-align: center;
@@ -331,46 +356,36 @@ nav i:hover {
 }
 .contact-container {
     width: 95%;
-    height: 480px;
-    margin-left: 35px;
     border-radius: .8rem;
     background-color: whitesmoke;
     display: flex;
     justify-content: space-between;
+    align-items: center;
+    margin-bottom: 1rem;
+    padding-right: 5rem;
 }
 .contact-container img {
     width: 30%;
     height: 480px;
-    margin-right: 2rem;
     border-top-left-radius: .8rem;
     border-bottom-left-radius: .8rem;
     box-shadow: inset  10000px  0 0  rgba(0, 0, 0, 0.884);
+    object-fit: cover;
 }
-.contact-writeUp {
-    margin-top: 5rem;
-    margin-right: 5rem;
-}
-.contact-writeUp h4 {
-    margin-top: 2rem;
-}
-.contact-writeUp p {
-    margin-top: .5rem;
-    margin-left: 2.3rem;
+.contact-writeUp{
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
 }
 .contact-writeUp i {
     color: #28e26d;
-    margin-right: 1rem;
     font-size: 1.5rem;
-}
-.main-contact {
-    margin-top: 5rem;
-    margin-right: 7rem;
 }
 .form {
     display: flex;
     justify-content: center;
     align-items: center;
-    flex-direction: row;
+    flex-direction: column;
 }
 .form input {
     display: block;
@@ -398,4 +413,51 @@ nav i:hover {
     background-color: #28e26d;
 }
 
+
+@media screen and (min-width: 375px) and (max-width: 640px) {
+ .background-image > h2 {
+    font-size: 2rem;
+ } 
+ .background-image > p {
+    font-size: 1.5rem;
+    padding: 0 4rem;
+    width: 100%;
+ }
+ nav > h2 {
+     font-size: 1.5rem;
+   }
+ ul li a {
+     display: none;
+   }
+ nav {
+     display: flex;
+     justify-content: space-between;
+   }
+ .about-content {
+     flex-direction: column;
+   }
+ .contact-container {
+     flex-direction: column;
+     justify-content: center;
+     padding-right: 0px;
+     gap: 2rem;
+   }
+  
+ .contact-container > img {
+    width: 100%;
+     border-bottom-right-radius: .8rem;
+     border-top-right-radius: .8rem;
+   }
+ .form{
+     margin-bottom: 1rem;
+     align-self: flex-start;
+   }
+ .about-text-wrapper{
+     margin-top: 1rem;
+   }
+ .box{
+     width: 100%;
+   }
+
+}
   
